kernel/src/stm32h7-linux/user/toybox/build_error.log
scripts/genconfig.sh
scripts/make.sh
generated/{Config.in
Warning: Config.probed changed, run 'make oldconfig'
,newtoys.h,flags.h}
Compile toybox
.................In file included from ./toys.h:9,
                 from lib/deflate.c:11:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
In file included from ./toys.h:9,
                 from lib/dirtree.c:6:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
In file included from ./toys.h:9,
                 from lib/elf.c:6:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
In file included from ./toys.h:9,
                 from lib/env.c:3:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
In file included from ./toys.h:9,
                 from lib/net.c:1:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
In file included from ./toys.h:9,
                 from lib/tty.c:17:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
In file included from ./toys.h:9,
                 from lib/lib.c:7:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
In file included from ./toys.h:9,
                 from lib/xwrap.c:10:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
In file included from toys.h:9,
                 from main.c:6:
lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
In file included from ./toys.h:9,
                 from lib/args.c:10:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
In file included from ./toys.h:9,
                 from lib/commas.c:6:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
In file included from ./toys.h:9,
                 from toys/lsb/dmesg.c:33:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
In file included from ./toys.h:9,
                 from lib/utf8.c:1:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
In file included from ./toys.h:9,
                 from lib/password.c:6:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
In file included from ./toys.h:9,
                 from lib/hash.c:9:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
In file included from ./toys.h:9,
                 from lib/llist.c:6:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
In file included from ./toys.h:9,
                 from lib/portability.c:7:
./lib/portability.h:106:13: error: unknown type name 'wchar_t'
  106 | int wcwidth(wchar_t wc);
      |             ^~~~~~~
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
./lib/portability.h:106:1: note: 'wchar_t' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  105 | #include <wchar.h>
  +++ |+#include <stddef.h>
  106 | int wcwidth(wchar_t wc);
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
./toys.h:46:10: fatal error: utime.h: No such file or directory
   46 | #include <utime.h>
      |          ^~~~~~~~~
compilation terminated.
make: *** [Makefile:18: toybox] Error 1
